# splendor-tools

./: README.md  cards.csv  nobles.csv  protocol.md
agent/doofus/include/: Board.h  Constants.h  Game.h  Player.h
agent/doofus/src/: Board.cpp  Card.cpp  Game.cpp  Util.cpp  main.cpp
agent/echo/: echo.cpp
agent/error/: error.cpp
agent/hang/: hang
agent/silent/: silent
arbiter/: Config.php  README.md  arbiter.php  tournament2.php  tournament2.sh  tournament34.php  tournament34.sh
arbiter/lib/: AnsiColors.php  Args.php  Board.php  Card.php  Core.php  Deck.php  Game.php  GameResult.php  Interactor.php  Log.php  MatchResult.php  MatchS.php  Noble.php  Output.php  Player.php  ReservedCard.php  SaveGame.php  SaveGameTurn.php  SplendorException.php  Str.php  Tournament.php  Tournament2.php  Tournament34.php  Util.php
client/doofus/: CMakeLists.txt
client/doofus/include/: Board.h  Card.h  ChipSet.h  Constants.h  Game.h  Player.h  Util.h
client/doofus/src/: Board.cpp  ChipSet.cpp  Game.cpp  Player.cpp  Util.cpp  main.cpp
client/echo/: echo
client/error/: error
client/hang/: hang.cpp
client/silent/: silent.cpp
scripts/: material-symbols.sh
viewer/: README.md  index.html
viewer/css/: main.css
viewer/js/: constants.js  main.js
